# SCS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  DNA Data.txt  LCS_Scorer.cpp  LCS_Scorer.cpp.orig  Makefile  README.md  SCS  cmake_install.cmake  dna.txt  index.html  main.cpp  main.cpp.orig  main.js  noerror.cpp  server.js
SERV/: index.html  main.js  manifest.yml  server.js
SERV/nodeserv/: server.js
data/: D.txt  DNA Data.txt  configs.h  dna.txt
include/: LCS_Scorer.h  noerror.h
src/: LCS_Scorer.cpp  main.cpp  noerror.cpp  testgen.cpp
